# build_your_own_adventure

./: .gitignore  404.html  README.md  index.html  index.js  index.js.map  index.txt  start_everything.sh
_next/static/chunks/: 139-fda814a5bfe249e6.js  main-74884f2ca49a37f3.js  main-app-bdc7f6d6a25c91dc.js  main-app-db7a1363608accbb.js  main-b313086ab927d2db.js  webpack-c24426bc3f77de0d.js  webpack-d938ede09ef02fb8.js  webpack-efbc34aed826789e.js
_next/static/chunks/app/: page-6f7b69724950f548.js
_next/static/css/: f3faa6a9ebcf486b.css
backend/: Dockerfile.api  Procfile  alembic.ini  docker-compose.yml  fly.toml  pyproject.toml  requirements.txt  reset_db.sh  start.sh
backend/alembic/: env.py
backend/alembic/versions/: 59d9d986cf0a_basic_tables.py
backend/build_your_own_adventure_api/: crud.py  database.py  main.py  models.py  schemas.py
frontend/: next.config.js  package-lock.json  package.json  tsconfig.json
frontend/app/: page.tsx
frontend/app/models/: part.tsx  story.tsx  tree.tsx  utils.tsx
frontend/app/routes/: _index.tsx
frontend/app/styles/: index.css
