[tool.poetry]
name = "build-your-own-adventure-backend"
version = "0.1.0"
description = ""
authors = ["Daniel Neshyba-Rowe <rowedanielp@gmail.com>"]
readme = "README.md"
packages = [{include = "build_your_own_adventure_backend"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
alembic = "^1.10.4"
sqlalchemy = "^2.0.12"
pymysql = "^1.0.3"
cryptography = "^40.0.2"
pydantic = "^1.10.7"
orjson = "^3.8.12"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
